--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,38 @@ version '0.0.1'
 
 apply plugin: 'java'
 
-sourceCompatibility = 1.5
+/**
+ * Define source and target java version compatibility
+ */
+sourceCompatibility = 1.8
+targetCompatibility = 1.8
+group = 'Routing'
+
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
+
+// https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
+    compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
+
+// https://mvnrepository.com/artifact/com.google.code.gson/gson
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+
+    compile "com.sparkjava:spark-core:2.5"
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
+
+/**
+ * Define the name and version of the resulting jar file
+ */
+jar {
+    baseName = 'RoutenService'
+    version = '0.0.1'
+}
+
