--- a/build.gradle
+++ b/build.gradle
@@ -20,10 +20,9 @@ dependencies {
 // https://mvnrepository.com/artifact/org.slf4j/slf4j-simple
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 
-// https://mvnrepository.com/artifact/com.google.code.gson/gson
-    compile group: 'com.google.code.gson', name: 'gson', version: '2.3.1'
+    compile 'com.google.code.gson:gson:2.7'
 
-    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
 
     compile "com.sparkjava:spark-core:2.5"
 
