--- a/build.gradle
+++ b/build.gradle
@@ -21,10 +21,16 @@ dependencies {
     compile group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.21'
 
     compile 'com.google.code.gson:gson:2.7'
-
-    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     compile "com.sparkjava:spark-core:2.5"
+
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.6'
+    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.0.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.6'
+    compile group: 'org.json', name: 'json', version: '20140107'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
