--- a/build.gradle
+++ b/build.gradle
@@ -47,6 +47,14 @@ dependencies {
 
     compile "com.sparkjava:spark-core:2.5"
 
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.4.9'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.3.6'
+    compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.0.2'
+    compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.6'
+    compile group: 'org.json', name: 'json', version: '20140107'
+
+    compile 'io.rest-assured:rest-assured:3.0.1'
+
     testCompile group: 'junit', name: 'junit', version: '4.11'
 }
 
