--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,8 @@ dependencies {
     compile group: 'org.apache.httpcomponents', name: 'httpasyncclient', version: '4.0.2'
     compile group: 'org.apache.httpcomponents', name: 'httpmime', version: '4.3.6'
     compile group: 'org.json', name: 'json', version: '20140107'
+    compile group: 'com.mashape.unirest', name: 'unirest-java', version: '1.3.0'
+
 
     compile 'io.rest-assured:rest-assured:3.0.1'
 
